# Mathmatika

./: .env.example  .gitignore  CLAUDE.md  README.md  app-config.ts  package.json
api/: .env.example  pyproject.toml
api/src/: main.py
api/src/chat/: __init__.py  models.py  router.py  service.py
api/src/manim/: __init__.py  ai_generator.py  lint_service.py  models.py  prompt_refiner.py  router.py  service.py  templates.py
api/src/rag/: __init__.py  models.py  router.py  service.py
api/src/research/: __init__.py  models.py  router.py  service.py
api/src/voice/: __init__.py  livekit_agent.py  models.py  router.py  service.py
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
app/(landing)/: page.tsx
components/: bg-gradient.tsx  icon.tsx  manim-visualizer.tsx
components/chat/: chat-background.tsx  chat-prompt.tsx  chat-sidebar.tsx  enhanced-chat-example.tsx  logo.tsx  message.tsx  sidebar-toggle.tsx  thread-list.tsx  typing-indicator.tsx  user-profile.tsx  video-panel.tsx
components/landing/: CTA.tsx  Documentation.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navigation.tsx  Pricing.tsx  SocialProof.tsx  Testimonials.tsx  hero-video-section.tsx  icons.tsx  index.ts
components/shared/: Badge.tsx  FeatureCard.tsx  index.ts
components/testing/: rag-panel.tsx  voice-panel.tsx
components/ui/: AIOrb.tsx  button.tsx  dot-loading.tsx  sidebar.tsx  tabs.tsx
components/voice/: VoiceControls.tsx  VoicePanel.tsx  (+9 more)
config/: siteConfig.ts
hooks/: use-sidebar-resize.ts
lib/: chat-storage.ts  icons.ts
providers/: providers.tsx
(+20 files in other folders)
