[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "ruff>=0.13.3",
    "exa-py>=1.0.10",
    "cerebras-cloud-sdk>=0.1.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.11.9",
    "dotenv>=0.9.9",
]
