[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "ruff>=0.13.3",
    "exa-py>=1.0.10",
    "cerebras-cloud-sdk>=0.1.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.11.9",
    "dotenv>=0.9.9",
    "manim>=0.18.0",
    "requests>=2.31.0",
    "latex>=0.7.0",
    "pinecone>=7.3.0",
    "langchain-core>=0.3.78",
    "langchain-community>=0.3.30",
    "langchain-pinecone>=0.2.12",
    "pypdf>=6.1.1",
    "sentence-transformers>=5.1.1",
    "langchain-huggingface>=0.3.1",
    "openai>=1.0.0",
    "livekit>=0.17.0",
    "livekit-agents>=0.11.0",
    "livekit-plugins-deepgram>=0.6.0",
    "livekit-plugins-openai>=0.9.0",
    "livekit-plugins-silero>=0.6.0",
]
